Fixed bug : Setting "z-index" of div.mt-dialog when using $.MTAppTabs()

--- a/MTAppjQuery/mt-static/plugins/_MTAppjQuery/css/MTAppjQuery.css
+++ b/MTAppjQuery/mt-static/plugins/_MTAppjQuery/css/MTAppjQuery.css
@@ -575,6 +575,9 @@ div.mtapp-sortable span.mtapp-linebreak-field-item {
 }
 
 /* !MTAppTabs */
+body.mtapp-tabs div.mt-dialog {
+  z-index: 9999 !important;
+}
 div.mtapp-tabs-container ul.mtapp-tabs-navi {
   margin-bottom: 0;
   border-bottom-style: none;
